finished solution for file extractor

--- a/codekata/kata04-1/DataMunging/DataMunging/DataMunging.csproj
+++ b/codekata/kata04-1/DataMunging/DataMunging/DataMunging.csproj
@@ -12,6 +12,8 @@
     <ItemGroup>
       <None Remove="data\weather.dat" />
       <Content Include="data\weather.dat" />
+      <None Remove="data\football.dat" />
+      <Content Include="data\football.dat" />
     </ItemGroup>
 
 </Project>
